test/error/error5.pas
{函数调用时参数类型不匹配}
program prog;
begin
  writeln('Hello, world!');
  writeln(ord('a', 'b', 'c'));
end.
